--- a/index.html
+++ b/index.html
@@ -39,28 +39,48 @@
 <h2>
 <a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads</h2>
 
-<p><a href="https://github.com/thunder-nyc/Thunder/releases">Current release</a> of Thunder is version 0.0.0. You can download it from our <a href="https://github.com/thunder-nyc/Thunder/releases">release page</a> or check it out in our <a href="https://github.com/thunder-nyc/Thunder/tree/v0.0.0">Github repository</a>.</p>
+<p><a href="https://github.com/thunder-nyc/Thunder/releases">Current release</a> of Thunder is version 0.1.0. You can download it from our <a href="https://github.com/thunder-nyc/Thunder/releases">release page</a> or check it out in our <a href="https://github.com/thunder-nyc/Thunder/tree/v0.1.0">Github repository</a>.</p>
 
 <h2>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-<p>Thunder can be installed via a simple make command.</p>
-
-<div class="highlight highlight-sh"><pre>make install <span class="nv">prefix</span><span class="o">=</span>/usr/local
-</pre></div>
-
-<p>Please note that the Thunder library is still quite new and immature. Many of its features are still under implementation. Current repository contains a development version of Thunder prior to a first release.</p>
-
-<h3>
-<a name="prerequisites" class="anchor" href="#prerequisites"><span class="octicon octicon-link"></span></a>Prerequisites</h3>
-
 <p>Here is a list of prerequisites you need to have to make sure Thunder compiles</p>
 
 <ul>
-<li>A C++11 compiler that supports -std=c++11. We target our tests to <a href="https://gcc.gnu.org">gcc</a> &gt;= 4.8 and <a href="http://clang.llvm.org">llvm/clang</a> &gt;= 3.4.</li>
-<li>
-<a href="http://www.boost.org">Boost</a> &gt;= 1.56, with its <a href="http://www.boost.org/doc/libs/1_56_0/libs/serialization">Serialization</a> package.</li>
+<li>A compiler that supports C++11. Some examples are <a href="https://gcc.gnu.org">gcc</a> &gt;= 4.8 and <a href="http://clang.llvm.org">llvm/clang</a> &gt;= 3.4.</li>
 </ul>
+
+<h3>
+<a name="compile-thunder" class="anchor" href="#compile-thunder"><span class="octicon octicon-link"></span></a>Compile Thunder</h3>
+
+<p>Thunder can be installed via cmake. To configure the project, please execute</p>
+
+<div class="highlight highlight-sh"><pre><span class="nv">$ </span>cmake
+</pre></div>
+
+<p>Then, you can compile Thunder by</p>
+
+<div class="highlight highlight-sh"><pre><span class="nv">$ </span>make
+</pre></div>
+
+<p>If you want to install the project, you can use the following command after cmake configuration.</p>
+
+<div class="highlight highlight-sh"><pre><span class="nv">$ </span>make install
+</pre></div>
+
+<p>To set the installation prefix, you can add an option like <code>-DCMAKE_INSTALL_PREFIX=/usr/local</code> to the cmake command.</p>
+
+<p>Under Apple OS X you might get a warning regarding <a href="http://www.cmake.org/cmake/help/v3.0/policy/CMP0042.html">CMP0042</a>. Since it is safe to ignore the warning, you can add an option <code>-Wno-dev</code> to supress it.</p>
+
+<h3>
+<a name="compile-tests" class="anchor" href="#compile-tests"><span class="octicon octicon-link"></span></a>Compile Tests</h3>
+
+<p>To compile tests, you can add an option <code>-DBUILD_THUNDER_TESTS=ON</code> to the cmake command. Then, you can run the tests by</p>
+
+<div class="highlight highlight-sh"><pre>make <span class="nb">test</span>
+</pre></div>
+
+<p>In most systems the tests should be finished with no problems. However, it is possible that you may encounter occasional numerical precision errors depending on your compiler and standard C++ library. Checking the CTest logs manually is needed to make sure everything is okay.</p>
 
 <h2>
 <a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
@@ -184,25 +204,28 @@
 <h3>
 <a name="serialization" class="anchor" href="#serialization"><span class="octicon octicon-link"></span></a>Serialization</h3>
 
-<p>We use the <a href="http://www.boost.org/doc/libs/release/libs/serialization">boost serialization</a> library to serialize all data structures in Thunder.</p>
+<p>Thunder provides its own serialization functionalities that are very extensible. It can</p>
+
+<ul>
+<li>Serialize all fundamental types</li>
+<li>Avoid duplicated data saving for pointers</li>
+<li>Track polymorphic types and do correct serialization</li>
+<li>Easily extensible and non-intrusive for classes</li>
+</ul>
 
 <div class="highlight highlight-cpp"><pre><span class="k">using</span> <span class="k">namespace</span> <span class="n">thunder</span><span class="p">;</span>
-<span class="k">using</span> <span class="k">namespace</span> <span class="n">boost</span><span class="p">;</span>
 
 <span class="c1">// Create a tensor of size 3x9x7x10</span>
 <span class="n">DoubleTensor</span> <span class="nf">tensor</span><span class="p">(</span><span class="mi">3</span><span class="p">,</span> <span class="mi">9</span><span class="p">,</span> <span class="mi">7</span><span class="p">,</span> <span class="mi">10</span><span class="p">);</span>
 
-<span class="c1">// Create a string stream</span>
-<span class="n">std</span><span class="o">::</span><span class="n">stringstream</span> <span class="n">stream</span><span class="p">;</span>
+<span class="c1">// Create a text serializer that serializes to a string</span>
+<span class="n">StringTextSerializer</span> <span class="n">string_serializer</span><span class="p">;</span>
 
-<span class="c1">// Create an output archive link to the string stream</span>
-<span class="n">serialization</span><span class="o">::</span><span class="n">text_archive</span> <span class="n">archive</span><span class="p">(</span><span class="n">stream</span><span class="p">);</span>
-
-<span class="c1">// Serialize the tensor to the archive</span>
-<span class="n">archive</span> <span class="o">&lt;&lt;</span> <span class="n">tensor</span><span class="p">;</span>
+<span class="c1">// Serialize the tensor</span>
+<span class="n">string_serializer</span><span class="p">.</span><span class="n">save</span><span class="p">(</span><span class="n">tensor</span><span class="p">);</span>
 
 <span class="c1">// Now you can see the content of the serialized data</span>
-<span class="n">printf</span><span class="p">(</span><span class="s">"Serialized data: %s</span><span class="se">\n</span><span class="s">"</span><span class="p">,</span> <span class="n">stream</span><span class="p">.</span><span class="n">str</span><span class="p">().</span><span class="n">c_str</span><span class="p">());</span>
+<span class="n">printf</span><span class="p">(</span><span class="s">"Serialized data: %s</span><span class="se">\n</span><span class="s">"</span><span class="p">,</span> <span class="n">string_serializer</span><span class="p">.</span><span class="n">protocol</span><span class="p">().</span><span class="n">stream</span><span class="p">().</span><span class="n">str</span><span class="p">().</span><span class="n">c_str</span><span class="p">());</span>
 </pre></div>
 
 <h3>
