Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <p>To compile tests, you can add an option <code>-DBUILD_THUNDER_TESTS=ON</code> to the cmake command. Then, you can run the tests by</p>
 
-<div class="highlight highlight-sh"><pre>make <span class="nb">test</span>
+<div class="highlight highlight-sh"><pre><span class="nv">$ </span>make <span class="nb">test</span>
 </pre></div>
 
 <p>In most systems the tests should be finished with no problems. However, it is possible that you may encounter occasional numerical precision errors depending on your compiler and standard C++ library. Checking the CTest logs manually is needed to make sure everything is okay.</p>
